--- a/rookies/Rookie_2019_Kicker_Calc.ipynb
+++ b/rookies/Rookie_2019_Kicker_Calc.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled75.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPZpTJbi7Z3vP+NEX/AxPgW",
+      "authorship_tag": "ABX9TyOHWKdAPEmd4hGjg8d2ppfx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/JimKing100/nfl-test/blob/master/Rookie_2019_Kicker_Calc.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/JimKing100/nfl-test/blob/master/rookies/Rookie_2019_Kicker_Calc.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -60,7 +60,7 @@
       "metadata": {
         "id": "mV9wV6zGaRTI",
         "colab_type": "code",
-        "outputId": "39602fa7-98d8-43da-d5fb-c79832c5a781",
+        "outputId": "cec87708-29a0-4ee4-db9e-244e33ddcf81",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -173,7 +173,7 @@
       "metadata": {
         "id": "0msfUYmMb1-t",
         "colab_type": "code",
-        "outputId": "8f53eed7-b2f2-4a8c-b35a-a8e06b4f6e85",
+        "outputId": "7bde548a-7a85-4f70-dea9-a4e89451dabb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -354,7 +354,7 @@
       "metadata": {
         "id": "C_u-io7WcaKF",
         "colab_type": "code",
-        "outputId": "ce536bc7-57d8-49aa-f645-f34dbb77b5c9",
+        "outputId": "e929a4c8-de7e-472b-8ed8-6fc8065f2bd2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -497,6 +497,193 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "6bcVGB8l7sL6",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 309
+        },
+        "outputId": "66584cff-2530-4525-ae1c-b541868f5c40"
+      },
+      "source": [
+        "# The conversion dataframe - raw conversion data\n",
+        "conv_df.head()"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>pid</th>\n",
+              "      <th>gid</th>\n",
+              "      <th>year</th>\n",
+              "      <th>week</th>\n",
+              "      <th>type</th>\n",
+              "      <th>bc</th>\n",
+              "      <th>first_bc</th>\n",
+              "      <th>last_bc</th>\n",
+              "      <th>name_bc</th>\n",
+              "      <th>psr</th>\n",
+              "      <th>first_psr</th>\n",
+              "      <th>last_psr</th>\n",
+              "      <th>name_psr</th>\n",
+              "      <th>trg</th>\n",
+              "      <th>first_trg</th>\n",
+              "      <th>last_trg</th>\n",
+              "      <th>name_trg</th>\n",
+              "      <th>conv</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>456</td>\n",
+              "      <td>3</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>1</td>\n",
+              "      <td>PASS</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>RC-2800</td>\n",
+              "      <td>Randall</td>\n",
+              "      <td>Cunningham</td>\n",
+              "      <td>Randall Cunningham</td>\n",
+              "      <td>RI-0200</td>\n",
+              "      <td>Raghib</td>\n",
+              "      <td>Ismail</td>\n",
+              "      <td>Raghib Ismail</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1408</td>\n",
+              "      <td>9</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>1</td>\n",
+              "      <td>RUSH</td>\n",
+              "      <td>JS-6500</td>\n",
+              "      <td>James</td>\n",
+              "      <td>Stewart</td>\n",
+              "      <td>James Stewart</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2528</td>\n",
+              "      <td>16</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>2</td>\n",
+              "      <td>PASS</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>TB-0200</td>\n",
+              "      <td>Tony</td>\n",
+              "      <td>Banks</td>\n",
+              "      <td>Tony Banks</td>\n",
+              "      <td>BC-1600</td>\n",
+              "      <td>Ben</td>\n",
+              "      <td>Coates</td>\n",
+              "      <td>Ben Coates</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2779</td>\n",
+              "      <td>17</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>2</td>\n",
+              "      <td>PASS</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>BF-0100</td>\n",
+              "      <td>Brett</td>\n",
+              "      <td>Favre</td>\n",
+              "      <td>Brett Favre</td>\n",
+              "      <td>TD-0800</td>\n",
+              "      <td>Tyrone</td>\n",
+              "      <td>Davis</td>\n",
+              "      <td>Tyrone Davis</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>3052</td>\n",
+              "      <td>19</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>2</td>\n",
+              "      <td>RUSH</td>\n",
+              "      <td>MA-1000</td>\n",
+              "      <td>Mike</td>\n",
+              "      <td>Anderson</td>\n",
+              "      <td>Mike Anderson</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    pid  gid  year  week  type  ...      trg first_trg last_trg       name_trg conv\n",
+              "0   456    3  2000     1  PASS  ...  RI-0200    Raghib   Ismail  Raghib Ismail    1\n",
+              "1  1408    9  2000     1  RUSH  ...      NaN       NaN      NaN            NaN    1\n",
+              "2  2528   16  2000     2  PASS  ...  BC-1600       Ben   Coates     Ben Coates    1\n",
+              "3  2779   17  2000     2  PASS  ...  TD-0800    Tyrone    Davis   Tyrone Davis    1\n",
+              "4  3052   19  2000     2  RUSH  ...      NaN       NaN      NaN            NaN    1\n",
+              "\n",
+              "[5 rows x 18 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "EmsfuwlYcf10",
         "colab_type": "code",
         "colab": {}
@@ -506,20 +693,20 @@
         "def pull_stats(df, df1, df2, df3, col, p, y, g):\n",
         "    missedfg_points = 0\n",
         "    conversion_points = 0\n",
-        "    if (df[col].loc[(df['name']==p) & (df['year']==y) & (df['game']==g)].empty):\n",
-        "        start_year = df1['start'].loc[(df1['name']==p)].iloc[0]\n",
+        "    if (df[col].loc[(df['player']==p) & (df['year']==y) & (df['game']==g)].empty):\n",
+        "        start_year = df1['start'].loc[(df1['player']==p)].iloc[0]\n",
         "        if y < start_year:\n",
         "            points = float('NaN')\n",
         "        else:\n",
         "            points = 0\n",
         "    else:\n",
-        "        conversion_points1 = df3['conv'].loc[(df3['name_bc']==p) & (df3['year']==y) & (df3['week']==g)].count()\n",
-        "        conversion_points2 = df3['conv'].loc[(df3['name_psr']==p) & (df3['year']==y) & (df3['week']==g)].count()\n",
-        "        conversion_points3 = df3['conv'].loc[(df3['name_trg']==p) & (df3['year']==y) & (df3['week']==g)].count()\n",
+        "        conversion_points1 = df3['conv'].loc[(df3['bc']==p) & (df3['year']==y) & (df3['week']==g)].count()\n",
+        "        conversion_points2 = df3['conv'].loc[(df3['psr']==p) & (df3['year']==y) & (df3['week']==g)].count()\n",
+        "        conversion_points3 = df3['conv'].loc[(df3['trg']==p) & (df3['year']==y) & (df3['week']==g)].count()\n",
         "\n",
         "        conversion_points = conversion_points1 + conversion_points2 + conversion_points3\n",
-        "        missedfg_points = df2['good'].loc[(df2['name']==p) & (df2['year']==y) & (df2['week']==g)].count()\n",
-        "        points = df[col].loc[(df['name']==p) & (df['year']==y) & (df['game']==g)].iloc[0]\n",
+        "        missedfg_points = df2['good'].loc[(df2['fkicker']==p) & (df2['year']==y) & (df2['week']==g)].count()\n",
+        "        points = df[col].loc[(df['player']==p) & (df['year']==y) & (df['game']==g)].iloc[0]\n",
         "\n",
         "    return points - missedfg_points + conversion_points\n"
       ],
@@ -600,17 +787,17 @@
         "                ]\n",
         "\n",
         "kicker_df = rookie_kicker_df.loc[(rookie_kicker_df['position1'] == 'K')]\n",
-        "player_list = kicker_df['name'].tolist()\n",
+        "player_list = kicker_df['player'].tolist()\n",
         "\n",
         "final_df = pd.DataFrame(columns = column_names)\n",
         "\n",
         "for player in player_list:\n",
         "\n",
-        "    first = rookie_kicker_df['first'].loc[(rookie_kicker_df['name']==player)].iloc[0]\n",
-        "    last = rookie_kicker_df['last'].loc[(rookie_kicker_df['name']==player)].iloc[0]\n",
-        "    name = rookie_kicker_df['name'].loc[(rookie_kicker_df['name']==player)].iloc[0]\n",
-        "    position1 = rookie_kicker_df['position1'].loc[(rookie_kicker_df['name']==player)].iloc[0]\n",
-        "    year = rookie_kicker_df['start'].loc[(rookie_kicker_df['name']==player)].iloc[0]\n",
+        "    first = rookie_kicker_df['first'].loc[(rookie_kicker_df['player']==player)].iloc[0]\n",
+        "    last = rookie_kicker_df['last'].loc[(rookie_kicker_df['player']==player)].iloc[0]\n",
+        "    name = rookie_kicker_df['name'].loc[(rookie_kicker_df['player']==player)].iloc[0]\n",
+        "    position1 = rookie_kicker_df['position1'].loc[(rookie_kicker_df['player']==player)].iloc[0]\n",
+        "    year = rookie_kicker_df['start'].loc[(rookie_kicker_df['player']==player)].iloc[0]\n",
         "\n",
         "    player_scores = []\n",
         "\n",
@@ -629,16 +816,16 @@
       "metadata": {
         "id": "l_vT0yPSkX4O",
         "colab_type": "code",
-        "outputId": "8f3c6b93-9090-43aa-ac5a-eac2da52e502",
+        "outputId": "32fe4094-13e2-4e07-ba3c-ba235bd999ef",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 227
+          "height": 261
         }
       },
       "source": [
         "final_df.head(50)"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -688,7 +875,7 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>Matt Gay</td>\n",
+              "      <td>MG-0306</td>\n",
               "      <td>Matt</td>\n",
               "      <td>Gay</td>\n",
               "      <td>Matt Gay</td>\n",
@@ -712,7 +899,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>Chase McLaughlin</td>\n",
+              "      <td>CM-2137</td>\n",
               "      <td>Chase</td>\n",
               "      <td>McLaughlin</td>\n",
               "      <td>Chase McLaughlin</td>\n",
@@ -736,7 +923,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>Austin Seibert</td>\n",
+              "      <td>AS-0575</td>\n",
               "      <td>Austin</td>\n",
               "      <td>Seibert</td>\n",
               "      <td>Austin Seibert</td>\n",
@@ -760,7 +947,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>Joey Slye</td>\n",
+              "      <td>JS-3825</td>\n",
               "      <td>Joey</td>\n",
               "      <td>Slye</td>\n",
               "      <td>Joey Slye</td>\n",
@@ -787,11 +974,11 @@
               "</div>"
             ],
             "text/plain": [
-              "             player   first        last  ... game14 game15 game16\n",
-              "0          Matt Gay    Matt         Gay  ...      9     10      1\n",
-              "1  Chase McLaughlin   Chase  McLaughlin  ...      0      0      0\n",
-              "2    Austin Seibert  Austin     Seibert  ...      7      3      6\n",
-              "3         Joey Slye    Joey        Slye  ...      8      8      4\n",
+              "    player   first        last              name  ... game13 game14 game15 game16\n",
+              "0  MG-0306    Matt         Gay          Matt Gay  ...      9      9     10      1\n",
+              "1  CM-2137   Chase  McLaughlin  Chase McLaughlin  ...      0      0      0      0\n",
+              "2  AS-0575  Austin     Seibert    Austin Seibert  ...     11      7      3      6\n",
+              "3  JS-3825    Joey        Slye         Joey Slye  ...     10      8      8      4\n",
               "\n",
               "[4 rows x 21 columns]"
             ]
@@ -799,7 +986,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 10
         }
       ]
     },
