--- a/predictions/Predictions_Rookies.ipynb
+++ b/predictions/Predictions_Rookies.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled78.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMJ71PakBC0KJRfqbC2BUSE",
+      "authorship_tag": "ABX9TyMs/s8SoOQOWSBz5a3Nd4Rb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1735,6 +1735,20 @@
           "execution_count": 17
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wXNjm0vtLqxn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Save the results to .csv file\n",
+        "final_df.to_csv('/content/week1-pred-offense-rookies.csv', index=False)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
