--- a/predictions/Predictions_Rookies.ipynb
+++ b/predictions/Predictions_Rookies.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled78.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMs/s8SoOQOWSBz5a3Nd4Rb",
+      "authorship_tag": "ABX9TyOtwwt5W7sVGWsaMVZ8uGw8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,7 +91,7 @@
       "metadata": {
         "id": "TejDRzCRssXB",
         "colab_type": "code",
-        "outputId": "76681963-0416-4d18-f618-f5b3ea238aee",
+        "outputId": "3fe3530e-ffc4-4f6c-b526-723c10eee5b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 326
@@ -307,7 +307,7 @@
       "metadata": {
         "id": "ipRc24Sns4z0",
         "colab_type": "code",
-        "outputId": "3a362d2f-a3b8-45bc-c1dc-9a9eaf2a56a0",
+        "outputId": "c970c74b-1493-426c-e423-3e99a7e1359f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
@@ -511,7 +511,7 @@
       "metadata": {
         "id": "xQsbhKXUD1kP",
         "colab_type": "code",
-        "outputId": "9e2c222c-2d06-4556-a071-1ac06775644d",
+        "outputId": "81a46de4-cd69-44a4-ab5c-8d248d2aff6f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -623,7 +623,7 @@
       "metadata": {
         "id": "CM9b9lzfDmv1",
         "colab_type": "code",
-        "outputId": "ae234208-8b38-40e8-8af1-f50d52a8495f",
+        "outputId": "bbb0a28f-002b-49f4-908c-f75b1b6acfd2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
@@ -918,10 +918,10 @@
       "metadata": {
         "id": "bhyiPNCtzkk1",
         "colab_type": "code",
-        "outputId": "b9f9ce53-b2c8-4ca0-bdce-cb7008090839",
+        "outputId": "69cfb2e4-8a4e-427f-9aa9-f7fe6416f335",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 255
+          "height": 204
         }
       },
       "source": [
@@ -1092,10 +1092,10 @@
       "metadata": {
         "id": "NGbgn6O-9TaN",
         "colab_type": "code",
-        "outputId": "12d56fe5-eb4e-4f49-812f-5c384cfeb38a",
+        "outputId": "d9d316bc-d735-41ae-c9df-c6b066cd9cf8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 289
+          "height": 238
         }
       },
       "source": [
@@ -1298,7 +1298,7 @@
       "metadata": {
         "id": "TV-wQMCPGN6n",
         "colab_type": "code",
-        "outputId": "90139889-1785-4e1a-cdca-48fac585d441",
+        "outputId": "5c3ed841-492f-41cb-923c-6eb86faba119",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
@@ -1338,13 +1338,13 @@
         {
           "output_type": "stream",
           "text": [
-            "[16:29:51] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
-            "Validation Mean Absolute Error: 33.43257703682751\n",
-            "Validation R^2: 0.14888304387900608\n",
+            "[15:30:29] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+            "Validation Mean Absolute Error: 30.827245421525344\n",
+            "Validation R^2: 0.4855802620513896\n",
             "\n",
             "\n",
-            "Test Mean Absolute Error: 33.05754148411301\n",
-            "Test R^2: 0.41761372601644464\n"
+            "Test Mean Absolute Error: 30.22407787628894\n",
+            "Test R^2: 0.4579926498274599\n"
           ],
           "name": "stdout"
         }
@@ -1355,11 +1355,11 @@
       "metadata": {
         "id": "1OvReWreGqwC",
         "colab_type": "code",
+        "outputId": "2432db41-3d9e-48da-c66c-738924f5c73d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 326
-        },
-        "outputId": "7fb54862-e16d-47b5-cd80-9ffa7b130a70"
+        }
       },
       "source": [
         "# Store the predictions in the results_df dataframe\n",
@@ -1433,9 +1433,9 @@
               "      <td>Utah</td>\n",
               "      <td>Pacific 12</td>\n",
               "      <td>140.00</td>\n",
-              "      <td>60.953320</td>\n",
-              "      <td>-79.046680</td>\n",
-              "      <td>-1.296840</td>\n",
+              "      <td>97.097916</td>\n",
+              "      <td>-42.902084</td>\n",
+              "      <td>-0.441844</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -1455,9 +1455,9 @@
               "      <td>Illinois</td>\n",
               "      <td>Big Ten</td>\n",
               "      <td>87.00</td>\n",
-              "      <td>65.121292</td>\n",
-              "      <td>-21.878708</td>\n",
-              "      <td>-0.335969</td>\n",
+              "      <td>61.544170</td>\n",
+              "      <td>-25.455830</td>\n",
+              "      <td>-0.413619</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -1477,9 +1477,9 @@
               "      <td>Oklahoma</td>\n",
               "      <td>Big 12</td>\n",
               "      <td>112.00</td>\n",
-              "      <td>82.645805</td>\n",
-              "      <td>-29.354195</td>\n",
-              "      <td>-0.355181</td>\n",
+              "      <td>127.132736</td>\n",
+              "      <td>15.132736</td>\n",
+              "      <td>0.119031</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -1499,9 +1499,9 @@
               "      <td>Virginia Tech</td>\n",
               "      <td>Atlantic Coast (ACC)</td>\n",
               "      <td>124.00</td>\n",
-              "      <td>42.704830</td>\n",
-              "      <td>-81.295170</td>\n",
-              "      <td>-1.903653</td>\n",
+              "      <td>52.360210</td>\n",
+              "      <td>-71.639790</td>\n",
+              "      <td>-1.368210</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -1521,9 +1521,9 @@
               "      <td>Purdue</td>\n",
               "      <td>Big Ten</td>\n",
               "      <td>55.36</td>\n",
-              "      <td>29.559980</td>\n",
-              "      <td>-25.800020</td>\n",
-              "      <td>-0.872802</td>\n",
+              "      <td>18.701839</td>\n",
+              "      <td>-36.658161</td>\n",
+              "      <td>-1.960137</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -1531,11 +1531,11 @@
             ],
             "text/plain": [
               "    player position1  height  weight  ...  points  prediction       diff   percent\n",
-              "0  MG-0306         K    72.0   232.0  ...  140.00   60.953320 -79.046680 -1.296840\n",
-              "1  CM-2137         K    73.0   190.0  ...   87.00   65.121292 -21.878708 -0.335969\n",
-              "2  AS-0575         K    69.0   209.0  ...  112.00   82.645805 -29.354195 -0.355181\n",
-              "3  JS-3825         K    71.0   210.0  ...  124.00   42.704830 -81.295170 -1.903653\n",
-              "4  DB-2750        QB    72.0   205.0  ...   55.36   29.559980 -25.800020 -0.872802\n",
+              "0  MG-0306         K    72.0   232.0  ...  140.00   97.097916 -42.902084 -0.441844\n",
+              "1  CM-2137         K    73.0   190.0  ...   87.00   61.544170 -25.455830 -0.413619\n",
+              "2  AS-0575         K    69.0   209.0  ...  112.00  127.132736  15.132736  0.119031\n",
+              "3  JS-3825         K    71.0   210.0  ...  124.00   52.360210 -71.639790 -1.368210\n",
+              "4  DB-2750        QB    72.0   205.0  ...   55.36   18.701839 -36.658161 -1.960137\n",
               "\n",
               "[5 rows x 19 columns]"
             ]
@@ -1580,11 +1580,7 @@
       "metadata": {
         "id": "iI4c-Y2uGN_G",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 204
-        },
-        "outputId": "ea796677-7571-4cfc-86c9-3e725267300b"
+        "colab": {}
       },
       "source": [
         "# Iterate through the list of rookies to create the fina_df dataframe\n",
@@ -1614,11 +1610,27 @@
         "    week1_diff = results_df['diff'].loc[(results_df['player']==player)].iloc[0]\n",
         "    week1_pct = results_df['percent'].loc[(results_df['player']==player)].iloc[0]\n",
         "\n",
-        "    final_df = add_row(final_df, player, first, last, name, position, week1_pred, week1_act, week1_diff, week1_pct)\n",
-        "\n",
+        "    final_df = add_row(final_df, player, first, last, name, position, week1_pred, week1_act, week1_diff, week1_pct)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4DRKFnXQHBM9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "2565b2a7-409b-4b0c-b974-56f9bb196652"
+      },
+      "source": [
+        "final_df['week1-pred'] = final_df['week1-pred'].astype(int)\n",
         "final_df.head()"
       ],
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1661,10 +1673,10 @@
               "      <td>Gay</td>\n",
               "      <td>Matt Gay</td>\n",
               "      <td>K</td>\n",
-              "      <td>60.953320</td>\n",
+              "      <td>97</td>\n",
               "      <td>140.00</td>\n",
-              "      <td>-79.046680</td>\n",
-              "      <td>-1.296840</td>\n",
+              "      <td>-42.902084</td>\n",
+              "      <td>-0.441844</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -1673,10 +1685,10 @@
               "      <td>McLaughlin</td>\n",
               "      <td>Chase McLaughlin</td>\n",
               "      <td>K</td>\n",
-              "      <td>65.121292</td>\n",
+              "      <td>61</td>\n",
               "      <td>87.00</td>\n",
-              "      <td>-21.878708</td>\n",
-              "      <td>-0.335969</td>\n",
+              "      <td>-25.455830</td>\n",
+              "      <td>-0.413619</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -1685,10 +1697,10 @@
               "      <td>Seibert</td>\n",
               "      <td>Austin Seibert</td>\n",
               "      <td>K</td>\n",
-              "      <td>82.645805</td>\n",
+              "      <td>127</td>\n",
               "      <td>112.00</td>\n",
-              "      <td>-29.354195</td>\n",
-              "      <td>-0.355181</td>\n",
+              "      <td>15.132736</td>\n",
+              "      <td>0.119031</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -1697,10 +1709,10 @@
               "      <td>Slye</td>\n",
               "      <td>Joey Slye</td>\n",
               "      <td>K</td>\n",
-              "      <td>42.704830</td>\n",
+              "      <td>52</td>\n",
               "      <td>124.00</td>\n",
-              "      <td>-81.295170</td>\n",
-              "      <td>-1.903653</td>\n",
+              "      <td>-71.639790</td>\n",
+              "      <td>-1.368210</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -1709,10 +1721,10 @@
               "      <td>Blough</td>\n",
               "      <td>David Blough</td>\n",
               "      <td>QB</td>\n",
-              "      <td>29.559980</td>\n",
+              "      <td>18</td>\n",
               "      <td>55.36</td>\n",
-              "      <td>-25.800020</td>\n",
-              "      <td>-0.872802</td>\n",
+              "      <td>-36.658161</td>\n",
+              "      <td>-1.960137</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -1720,11 +1732,11 @@
             ],
             "text/plain": [
               "    player   first        last  ... week1-act week1-diff  week1-pct\n",
-              "0  MG-0306    Matt         Gay  ...    140.00 -79.046680  -1.296840\n",
-              "1  CM-2137   Chase  McLaughlin  ...     87.00 -21.878708  -0.335969\n",
-              "2  AS-0575  Austin     Seibert  ...    112.00 -29.354195  -0.355181\n",
-              "3  JS-3825    Joey        Slye  ...    124.00 -81.295170  -1.903653\n",
-              "4  DB-2750   David      Blough  ...     55.36 -25.800020  -0.872802\n",
+              "0  MG-0306    Matt         Gay  ...    140.00 -42.902084  -0.441844\n",
+              "1  CM-2137   Chase  McLaughlin  ...     87.00 -25.455830  -0.413619\n",
+              "2  AS-0575  Austin     Seibert  ...    112.00  15.132736   0.119031\n",
+              "3  JS-3825    Joey        Slye  ...    124.00 -71.639790  -1.368210\n",
+              "4  DB-2750   David      Blough  ...     55.36 -36.658161  -1.960137\n",
               "\n",
               "[5 rows x 9 columns]"
             ]
@@ -1732,7 +1744,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 18
         }
       ]
     },
